--- a/about.html
+++ b/about.html
@@ -27,7 +27,8 @@
     <a href="store.html" class="text-decoration-none text-dark">
       <div class="bg-pastel-red">
         <p class="text-center font-ambit-regular fw-semibold p-2">
-          Passa på! Just nu har vi fina alla hjärtans dag erbjudanden i shoppen!
+          ♥ Passa på! Just nu har vi fina alla hjärtans dag erbjudanden i
+          shoppen! ♥
         </p>
       </div>
     </a>
@@ -162,7 +163,7 @@
                 461 32 Trollhättan
               </p>
               <p class="font-ambit-regular fw-semibold">Telefonnummer:</p>
-              <p>0144-106 20</p>
+              <p>0144-106 29 60</p>
               <p class="font-ambit-regular fw-semibold">E-post:</p>
               <p>info@bagarbasse.se</p>
             </div>
@@ -171,31 +172,29 @@
       </div>
     </main>
     <div
-      class="container-fluid bg-pastel-red font-ambit-regular"
+      class="container-fluid bg-pastel-yellow font-ambit-regular"
       style="height: 300px"
     >
       <div class="container">
         <footer class="py-5">
           <ul class="nav justify-content-center pb-3 mb-3">
             <li class="nav-item">
-              <a href="index.html" class="nav-link px-2 text-muted">Hem</a>
+              <a href="index.html" class="nav-link px-2 text-dark">Hem</a>
             </li>
             <li class="nav-item">
-              <a href="store.html" class="nav-link px-2 text-muted"
-                >Produkter</a
-              >
+              <a href="store.html" class="nav-link px-2 text-dark">Produkter</a>
             </li>
             <li class="nav-item">
-              <a href="about.html" class="nav-link px-2 text-muted">Om oss</a>
+              <a href="about.html" class="nav-link px-2 text-dark">Om oss</a>
             </li>
             <li class="nav-item">
-              <a href="recipes.html" class="nav-link px-2 text-muted">Recept</a>
+              <a href="recipes.html" class="nav-link px-2 text-dark">Recept</a>
             </li>
             <li class="nav-item">
-              <a href="cart.html" class="nav-link px-2 text-muted">Varukorg</a>
+              <a href="cart.html" class="nav-link px-2 text-dark">Varukorg</a>
             </li>
           </ul>
-          <p class="text-center text-muted">© 2023 BagarBasse AB</p>
+          <p class="text-center text-dark">© 2023 BagarBasse AB</p>
         </footer>
       </div>
     </div>
