--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     <a href="store.html" class="text-decoration-none text-dark">
       <div class="bg-pastel-red">
         <p class="text-center font-ambit-regular fw-semibold p-2">
-          Passa på! Just nu har vi fina alla hjärtans dag erbjudanden i shoppen!
+          ♥ Passa på! Just nu har vi fina alla hjärtans dag erbjudanden i
+          shoppen! ♥
         </p>
       </div>
     </a>
@@ -100,7 +101,11 @@
       </nav>
     </header>
     <main>
-      <div id="carouselId" class="carousel slide" data-bs-ride="carousel">
+      <div
+        id="carouselId"
+        class="carousel slide carousel-frontpage"
+        data-bs-ride="carousel"
+      >
         <ol class="carousel-indicators">
           <li
             data-bs-target="#carouselId"
@@ -147,7 +152,9 @@
       <div class="container marketing pt-5">
         <div class="row featurette">
           <div class="col-md-7">
-            <h2 class="featurette-heading fw-normal lh-1 font-gatefold-demi">
+            <h2
+              class="featurette-heading fw-normal lh-1 font-gatefold-demi pb-3"
+            >
               First featurette heading.
               <span class="text-muted">It’ll blow your mind.</span>
             </h2>
@@ -167,7 +174,9 @@
 
         <div class="row featurette">
           <div class="col-md-7 order-md-2">
-            <h2 class="featurette-heading fw-normal lh-1 font-gatefold-demi">
+            <h2
+              class="featurette-heading fw-normal lh-1 font-gatefold-demi pb-3"
+            >
               Oh yeah, it’s that good.
               <span class="text-muted">See for yourself.</span>
             </h2>
@@ -188,31 +197,29 @@
       </div>
     </main>
     <div
-      class="container-fluid bg-pastel-red font-ambit-regular"
+      class="container-fluid bg-pastel-yellow font-ambit-regular"
       style="height: 300px"
     >
       <div class="container">
         <footer class="py-5">
           <ul class="nav justify-content-center pb-3 mb-3">
             <li class="nav-item">
-              <a href="index.html" class="nav-link px-2 text-muted">Hem</a>
+              <a href="index.html" class="nav-link px-2 text-dark">Hem</a>
             </li>
             <li class="nav-item">
-              <a href="store.html" class="nav-link px-2 text-muted"
-                >Produkter</a
-              >
+              <a href="store.html" class="nav-link px-2 text-dark">Produkter</a>
             </li>
             <li class="nav-item">
-              <a href="about.html" class="nav-link px-2 text-muted">Om oss</a>
+              <a href="about.html" class="nav-link px-2 text-dark">Om oss</a>
             </li>
             <li class="nav-item">
-              <a href="recipes.html" class="nav-link px-2 text-muted">Recept</a>
+              <a href="recipes.html" class="nav-link px-2 text-dark">Recept</a>
             </li>
             <li class="nav-item">
-              <a href="cart.html" class="nav-link px-2 text-muted">Varukorg</a>
+              <a href="cart.html" class="nav-link px-2 text-dark">Varukorg</a>
             </li>
           </ul>
-          <p class="text-center text-muted">© 2023 BagarBasse AB</p>
+          <p class="text-center text-dark">© 2023 BagarBasse AB</p>
         </footer>
       </div>
     </div>
