--- a/recipes.html
+++ b/recipes.html
@@ -28,7 +28,8 @@
     <a href="store.html" class="text-decoration-none text-dark">
       <div class="bg-pastel-red">
         <p class="text-center font-ambit-regular fw-semibold p-2">
-          Passa på! Just nu har vi fina alla hjärtans dag erbjudanden i shoppen!
+          ♥ Passa på! Just nu har vi fina alla hjärtans dag erbjudanden i
+          shoppen! ♥
         </p>
       </div>
     </a>
@@ -101,9 +102,9 @@
       <div class="container py-4">
         <div class="p-5 mb-4 bg-light rounded-3">
           <div class="container-fluid py-5">
-            <h1 class="display-5 font-gatefold-demi">
+            <h2 class="display-5 font-gatefold-demi">
               Sök bland våra bästa recept!
-            </h1>
+            </h2>
             <p class="col-md-8 fs-4 py-4 font-gt-alpina">
               Vill du baka några av våra bakverk själv? Här har vi samlat våra
               mest populära recept!
@@ -134,169 +135,209 @@
         >
           <div class="col recipe-item" onClick="showRecipe(649593)">
             <div class="card border-0 h-100 align-items-top">
-              <img
-                class="card-img-top rounded-4 store-item-image"
-                width="312"
-                height="231"
-                aria-label="Product Image"
-                src="https://spoonacular.com/recipeImages/649593-312x231.jpg"
-                alt="Card image cap"
-              />
-              <div class="card-body h-100 d-flex flex-column">
-                <h5 class="card-title store-item-title">Lemon Cupcakes</h5>
+              <div
+                class="recipe-card-img-top-wrapper rounded-4 d-inline-block overflow-hidden"
+              >
+                <img
+                  class="card-img-top rounded-4 store-item-image h-100 w-100"
+                  aria-label="Product Image"
+                  width="312"
+                  height="231"
+                  src="https://spoonacular.com/recipeImages/649593-312x231.jpg"
+                  alt="Card image cap"
+                />
+              </div>
+              <div class="card-body d-flex flex-column">
+                <h2 class="h5 card-title store-item-title">Lemon Cupcakes</h2>
               </div>
             </div>
           </div>
 
           <div class="col recipe-item" onClick="showRecipe(632527)">
             <div class="card border-0 h-100 align-items-top">
-              <img
-                class="card-img-top rounded-4 store-item-image"
-                width="312"
-                height="231"
-                aria-label="Product Image"
-                src="https://spoonacular.com/recipeImages/632527-312x231.jpg"
-                alt="Card image cap"
-              />
-              <div class="card-body h-100 d-flex flex-column">
-                <h5 class="card-title store-item-title">Apple Cupcakes</h5>
+              <div
+                class="recipe-card-img-top-wrapper rounded-4 d-inline-block overflow-hidden"
+              >
+                <img
+                  class="card-img-top rounded-4 store-item-image h-100 w-100"
+                  width="312"
+                  height="231"
+                  aria-label="Product Image"
+                  src="https://spoonacular.com/recipeImages/632527-312x231.jpg"
+                  alt="Card image cap"
+                />
+              </div>
+              <div class="card-body d-flex flex-column">
+                <h2 class="h5 card-title store-item-title">Apple Cupcakes</h2>
               </div>
             </div>
           </div>
 
           <div class="col recipe-item" onClick="showRecipe(652155)">
             <div class="card border-0 h-100 align-items-top">
-              <img
-                class="card-img-top rounded-4 store-item-image"
-                width="312"
-                height="231"
-                aria-label="Product Image"
-                src="https://spoonacular.com/recipeImages/652155-312x231.jpg"
-                alt="Card image cap"
-              />
-              <div class="card-body h-100 d-flex flex-column">
-                <h5 class="card-title store-item-title">
+              <div
+                class="recipe-card-img-top-wrapper rounded-4 d-inline-block overflow-hidden"
+              >
+                <img
+                  class="card-img-top rounded-4 store-item-image"
+                  aria-label="Product Image"
+                  width="312"
+                  height="231"
+                  src="https://spoonacular.com/recipeImages/652155-312x231.jpg"
+                  alt="Card image cap"
+                />
+              </div>
+              <div class="card-body d-flex flex-column">
+                <h2 class="h5 card-title store-item-title">
                   Mocca Cupcakes With Dried Fruit
-                </h5>
+                </h2>
               </div>
             </div>
           </div>
 
           <div class="col recipe-item" onClick="showRecipe(636331)">
             <div class="card border-0 h-100 align-items-top">
-              <img
-                class="card-img-top rounded-4 store-item-image"
-                width="312"
-                height="231"
-                aria-label="Product Image"
-                src="https://spoonacular.com/recipeImages/636331-312x231.jpg"
-                alt="Card image cap"
-              />
-              <div class="card-body h-100 d-flex flex-column">
-                <h5 class="card-title store-item-title">Brownie Cupcakes</h5>
+              <div
+                class="recipe-card-img-top-wrapper rounded-4 d-inline-block overflow-hidden"
+              >
+                <img
+                  class="card-img-top rounded-4 store-item-image"
+                  aria-label="Product Image"
+                  width="312"
+                  height="231"
+                  src="https://spoonacular.com/recipeImages/636331-312x231.jpg"
+                  alt="Card image cap"
+                />
+              </div>
+              <div class="card-body d-flex flex-column">
+                <h2 class="card-title store-item-title h5">Brownie Cupcakes</h2>
               </div>
             </div>
           </div>
 
           <div class="col recipe-item" onClick="showRecipe(658943)">
             <div class="card border-0 h-100 align-items-top">
-              <img
-                class="card-img-top rounded-4 store-item-image"
-                width="312"
-                height="231"
-                aria-label="Product Image"
-                src="https://spoonacular.com/recipeImages/658943-312x231.jpg"
-                alt="Card image cap"
-              />
-              <div class="card-body h-100 d-flex flex-column">
-                <h5 class="card-title store-item-title">S'mores Cupcakes</h5>
+              <div
+                class="recipe-card-img-top-wrapper rounded-4 d-inline-block overflow-hidden"
+              >
+                <img
+                  class="card-img-top rounded-4 store-item-image h-100 w-100"
+                  width="312"
+                  height="231"
+                  aria-label="Product Image"
+                  src="https://spoonacular.com/recipeImages/658943-312x231.jpg"
+                  alt="Card image cap"
+                />
+              </div>
+              <div class="card-body d-flex flex-column">
+                <h2 class="h5 card-title store-item-title">S'mores Cupcakes</h2>
               </div>
             </div>
           </div>
           <div class="col recipe-item" onClick="showRecipe(653353)">
             <div class="card border-0 h-100 align-items-top">
-              <img
-                class="card-img-top rounded-4 store-item-image"
-                width="312"
-                height="231"
-                aria-label="Product Image"
-                src="https://spoonacular.com/recipeImages/653353-312x231.jpg"
-                alt="Card image cap"
-              />
-              <div class="card-body h-100 d-flex flex-column">
-                <h5 class="card-title store-item-title">
+              <div
+                class="recipe-card-img-top-wrapper rounded-4 d-inline-block overflow-hidden"
+              >
+                <img
+                  class="card-img-top rounded-4 store-item-image h-100 w-100"
+                  aria-label="Product Image"
+                  width="312"
+                  height="231"
+                  src="https://spoonacular.com/recipeImages/653353-312x231.jpg"
+                  alt="Card image cap"
+                />
+              </div>
+              <div class="card-body d-flex flex-column">
+                <h2 class="h5 card-title store-item-title">
                   Nutella Cupcakes & Peanut Butter Frosting
-                </h5>
+                </h2>
               </div>
             </div>
           </div>
 
           <div class="col recipe-item" onClick="showRecipe(654487)">
             <div class="card border-0 h-100 align-items-top">
-              <img
-                class="card-img-top rounded-4 store-item-image"
-                width="312"
-                height="231"
-                aria-label="Product Image"
-                src="https://spoonacular.com/recipeImages/654487-312x231.jpg"
-                alt="Card image cap"
-              />
-              <div class="card-body h-100 d-flex flex-column">
-                <h5 class="card-title store-item-title">
+              <div
+                class="recipe-card-img-top-wrapper rounded-4 d-inline-block overflow-hidden"
+              >
+                <img
+                  class="card-img-top rounded-4 store-item-image h-100 d-100"
+                  aria-label="Product Image"
+                  width="312"
+                  height="231"
+                  src="https://spoonacular.com/recipeImages/654487-312x231.jpg"
+                  alt="Card image cap"
+                />
+              </div>
+              <div class="card-body d-flex flex-column">
+                <h2 class="h5 card-title store-item-title">
                   Pancake Cupcakes With Maple Frosting and Candied Bacon
-                </h5>
+                </h2>
               </div>
             </div>
           </div>
 
           <div class="col recipe-item" onClick="showRecipe(664312)">
             <div class="card border-0 h-100 align-items-top">
-              <img
-                class="card-img-top rounded-4 store-item-image"
-                width="312"
-                height="231"
-                aria-label="Product Image"
-                src="https://spoonacular.com/recipeImages/664312-312x231.jpg"
-                alt="Card image cap"
-              />
-              <div class="card-body h-100 d-flex flex-column">
-                <h5 class="card-title store-item-title">
+              <div
+                class="recipe-card-img-top-wrapper rounded-4 d-inline-block overflow-hidden"
+              >
+                <img
+                  class="card-img-top rounded-4 store-item-image h-100 w-100"
+                  aria-label="Product Image"
+                  width="312"
+                  height="231"
+                  src="https://spoonacular.com/recipeImages/664312-312x231.jpg"
+                  alt="Card image cap"
+                />
+              </div>
+              <div class="card-body d-flex flex-column">
+                <h2 class="card-title store-item-title h5">
                   Vanilla Cupcakes + Sour Cream Chocolate Ganache Frosting
-                </h5>
+                </h2>
               </div>
             </div>
           </div>
 
           <div class="col recipe-item" onClick="showRecipe(640148)">
             <div class="card border-0 h-100 align-items-top">
-              <img
-                class="card-img-top rounded-4 store-item-image"
-                width="312"
-                height="231"
-                aria-label="Product Image"
-                src="https://spoonacular.com/recipeImages/640148-312x231.jpg"
-                alt="Card image cap"
-              />
-              <div class="card-body h-100 d-flex flex-column">
-                <h5 class="card-title store-item-title">Cornflake Cupcakes</h5>
+              <div
+                class="recipe-card-img-top-wrapper rounded-4 d-inline-block overflow-hidden"
+              >
+                <img
+                  class="card-img-top rounded-4 store-item-image h-100 w-100"
+                  width="312"
+                  height="231"
+                  aria-label="Product Image"
+                  src="https://spoonacular.com/recipeImages/640148-312x231.jpg"
+                  alt="Card image cap"
+                />
+              </div>
+              <div class="card-body d-flex flex-column">
+                <h2 class="h5 card-title store-item-title">
+                  Cornflake Cupcakes
+                </h2>
               </div>
             </div>
           </div>
 
           <div class="col recipe-item" onClick="showRecipe(657850)">
             <div class="card border-0 h-100 align-items-top">
-              <img
-                class="card-img-top rounded-4 store-item-image"
-                width="312"
-                height="231"
-                aria-label="Product Image"
-                src="https://spoonacular.com/recipeImages/657850-312x231.jpg"
-                alt="Card image cap"
-              />
-              <div class="card-body h-100 d-flex flex-column">
-                <h5 class="card-title store-item-title">
+              <div
+                class="recipe-card-img-top-wrapper rounded-4 d-inline-block overflow-hidden"
+              >
+                <img
+                  class="card-img-top rounded-4 store-item-image h-100 w-100"
+                  aria-label="Product Image"
+                  src="https://spoonacular.com/recipeImages/657850-312x231.jpg"
+                  alt="Card image cap"
+                />
+              </div>
+              <div class="card-body d-flex flex-column">
+                <h2 class="h5 card-title store-item-title">
                   Raspberry Cupcakes With Raspberry Icing
-                </h5>
+                </h2>
               </div>
             </div>
           </div>
@@ -344,46 +385,46 @@
       </div>
     </main>
     <div
-    class="container-fluid bg-pastel-red font-ambit-regular"
-    style="height: 300px"
-  >
-    <div class="container">
-      <footer class="py-5">
-        <ul class="nav justify-content-center pb-3 mb-3">
-          <li class="nav-item">
-            <a href="index.html" class="nav-link px-2 text-muted">Hem</a>
-          </li>
-          <li class="nav-item">
-            <a href="store.html" class="nav-link px-2 text-muted"
-              >Produkter</a
-            >
-          </li>
-          <li class="nav-item">
-            <a href="about.html" class="nav-link px-2 text-muted">Om oss</a>
-          </li>
-          <li class="nav-item">
-            <a href="recipes.html" class="nav-link px-2 text-muted">Recept</a>
-          </li>
-          <li class="nav-item">
-            <a href="cart.html" class="nav-link px-2 text-muted">Varukorg</a>
-          </li>
-        </ul>
-        <p class="text-center text-muted">© 2023 BagarBasse AB</p>
-      </footer>
+      class="container-fluid bg-pastel-yellow font-ambit-regular"
+      style="height: 300px"
+    >
+      <div class="container">
+        <footer class="py-5">
+          <ul class="nav justify-content-center pb-3 mb-3">
+            <li class="nav-item">
+              <a href="index.html" class="nav-link px-2 text-dark">Hem</a>
+            </li>
+            <li class="nav-item">
+              <a href="store.html" class="nav-link px-2 text-dark">Produkter</a>
+            </li>
+            <li class="nav-item">
+              <a href="about.html" class="nav-link px-2 text-dark">Om oss</a>
+            </li>
+            <li class="nav-item">
+              <a href="recipes.html" class="nav-link px-2 text-dark">Recept</a>
+            </li>
+            <li class="nav-item">
+              <a href="cart.html" class="nav-link px-2 text-dark">Varukorg</a>
+            </li>
+          </ul>
+          <p class="text-center text-dark">© 2023 BagarBasse AB</p>
+        </footer>
+      </div>
     </div>
-  </div>
     <template id="recipe-template"
       ><div class="col recipe-item">
         <div class="card border-0 h-100 align-items-top">
-          <img
-            class="card-img-top rounded-4 recipe-item-image"
-            width="312"
-            height="231"
-            aria-label="Recipe Image"
-            src=""
-            alt="Card image cap"
-          />
-          <div class="card-body h-100 d-flex flex-column">
+          <div
+            class="recipe-card-img-top-wrapper rounded-4 d-inline-block overflow-hidden"
+          >
+            <img
+              class="card-img-top rounded-4 recipe-item-image h-100 w-100"
+              aria-label="Recipe Image"
+              src=""
+              alt="Card image cap"
+            />
+          </div>
+          <div class="card-body d-flex flex-column">
             <span class="card-title recipe-item-title fw-semibold fs-5"></span>
           </div>
         </div></div
