--- a/store.html
+++ b/store.html
@@ -35,9 +35,10 @@
 
   <body id="store">
     <a href="store.html" class="text-decoration-none text-dark">
-      <div class="bg-pastel-yellow">
+      <div class="bg-pastel-red">
         <p class="text-center font-ambit-regular fw-semibold p-2">
-          Passa på! Just nu har vi fina alla hjärtans dag erbjudanden i shoppen!
+          ♥ Passa på! Just nu har vi fina alla hjärtans dag erbjudanden i
+          shoppen! ♥
         </p>
       </div>
     </a>
@@ -118,24 +119,22 @@
         <footer class="py-5">
           <ul class="nav justify-content-center pb-3 mb-3">
             <li class="nav-item">
-              <a href="index.html" class="nav-link px-2 text-muted">Hem</a>
+              <a href="index.html" class="nav-link px-2 text-dark">Hem</a>
             </li>
             <li class="nav-item">
-              <a href="store.html" class="nav-link px-2 text-muted"
-                >Produkter</a
-              >
+              <a href="store.html" class="nav-link px-2 text-dark">Produkter</a>
             </li>
             <li class="nav-item">
-              <a href="about.html" class="nav-link px-2 text-muted">Om oss</a>
+              <a href="about.html" class="nav-link px-2 text-dark">Om oss</a>
             </li>
             <li class="nav-item">
-              <a href="recipes.html" class="nav-link px-2 text-muted">Recept</a>
+              <a href="recipes.html" class="nav-link px-2 text-dark">Recept</a>
             </li>
             <li class="nav-item">
-              <a href="cart.html" class="nav-link px-2 text-muted">Varukorg</a>
+              <a href="cart.html" class="nav-link px-2 text-dark">Varukorg</a>
             </li>
           </ul>
-          <p class="text-center text-muted">© 2023 BagarBasse AB</p>
+          <p class="text-center text-dark">© 2023 BagarBasse AB</p>
         </footer>
       </div>
     </div>
@@ -230,6 +229,9 @@
               <p class="m-3 mt-0 store-item-desc font-ambit"></p>
               <h5 class="m-3 font-gt-alpina">Ingredienser:</h5>
               <p class="m-3 mt-0 store-item-ingredients font-ambit"></p>
+              <h5 class="text-end p-4 pb-0 font-ambit-regular">
+                Pris: <span>50 kr</span>
+              </h5>
             </div>
 
             <div class="modal-footer">
