Fixed sticky footer

--- a/about.html
+++ b/about.html
@@ -107,6 +107,7 @@
               loading="lazy"
               referrerpolicy="no-referrer-when-downgrade"
               class="h-100 w-100"
+              title="map-frame"
             ></iframe>
           </div>
         </div>
@@ -172,7 +173,7 @@
       </div>
     </main>
     <div
-      class="container-fluid bg-pastel-yellow font-ambit-regular"
+      class="container-fluid bg-pastel-yellow font-ambit-regular mt-auto"
       style="height: 300px"
     >
       <div class="container">
