--- a/recipes.html
+++ b/recipes.html
@@ -57,7 +57,7 @@
         </button>
         <div
           id="navbar"
-          class="collapse navbar-collapse justify-content-center"
+          class="collapse navbar-collapse justify-content-center mt-auto"
         >
           <ul class="navbar-nav fw-semibold align-items-center">
             <li class="nav-item">
@@ -179,7 +179,7 @@
                 class="recipe-card-img-top-wrapper rounded-4 d-inline-block overflow-hidden"
               >
                 <img
-                  class="card-img-top rounded-4 store-item-image"
+                  class="card-img-top rounded-4 store-item-image h-100 w-100"
                   aria-label="Product Image"
                   width="312"
                   height="231"
@@ -201,7 +201,7 @@
                 class="recipe-card-img-top-wrapper rounded-4 d-inline-block overflow-hidden"
               >
                 <img
-                  class="card-img-top rounded-4 store-item-image"
+                  class="card-img-top rounded-4 store-item-image h-100 w-100"
                   aria-label="Product Image"
                   width="312"
                   height="231"
