--- a/store.html
+++ b/store.html
@@ -112,7 +112,7 @@
       <div class="modals-container"></div>
     </main>
     <div
-      class="container-fluid bg-pastel-yellow font-ambit-regular"
+      class="container-fluid bg-pastel-yellow font-ambit-regular mt-auto"
       style="height: 300px"
     >
       <div class="container">
@@ -230,7 +230,7 @@
               <h5 class="m-3 font-gt-alpina">Ingredienser:</h5>
               <p class="m-3 mt-0 store-item-ingredients font-ambit"></p>
               <h5 class="text-end p-4 pb-0 font-ambit-regular">
-                Pris: <span>50 kr</span>
+                Pris: <span class="store-item-price">50 kr</span>
               </h5>
             </div>
 
