--- a/cart.html
+++ b/cart.html
@@ -105,7 +105,7 @@
       </nav>
     </header>
     <main>
-      <div class="container">
+      <div class="container cart-container">
         <div class="row w-100">
           <div class="col-lg-12 col-md-12 col-12">
             <h2 class="display-5 mb-5 text-center font-gatefold-demi">
@@ -132,11 +132,12 @@
         </div>
         <div class="row mt-4 d-flex align-items-center">
           <div class="col-sm-6 order-md-2 text-end">
-            <a
+            <button
               href="#"
               class="btn btn-pastel-pink border-0 font-ambit-regular btn-primary mb-4 btn-lg pl-5 pr-5 checkout-button text-dark"
-              >Placera order</a
             >
+              Placera order
+            </button>
           </div>
           <div
             class="col-sm-6 font-ambit-regular mb-3 mb-m-1 order-md-1 text-md-start"
@@ -150,9 +151,23 @@
           </div>
         </div>
       </div>
+      <div class="container checkout-container d-none">
+        <div class="py-5">
+          <h2 class="display-5 mb-5 text-center font-gatefold-demi">
+            Tack för din order!
+          </h2>
+          <h3 class="mb-5 text-center font-gatefold-demi">
+            Din order är nu skapad.
+          </h3>
+          <h3 class="mb-5 text-center font-gatefold-demi pb-5">
+            En orderbekräftelse har skickats till din angivna e-postadress.
+          </h3>
+          <div class="checkout-cupcake mx-auto my-5"></div>
+        </div>
+      </div>
     </main>
     <div
-      class="container-fluid bg-pastel-yellow font-ambit-regular"
+      class="container-fluid bg-pastel-yellow font-ambit-regular mt-auto"
       style="height: 300px"
     >
       <div class="container">
@@ -206,12 +221,6 @@
         </td>
         <td class="actions" data-th="">
           <div class="text-end">
-            <button
-              class="btn btn-white border-secondary bg-white btn-md mb-2"
-              aria-label="Update cart item"
-            >
-              <i class="fas fa-sync"></i>
-            </button>
             <button
               class="btn btn-white border-secondary bg-white btn-md mb-2 delete-cart-item"
               aria-label="Delete cart item"
