--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
       crossorigin="anonymous"
     />
     <link
-      rel="stylesheet"
+      rel="stylesheet preload"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
     />
+
     <link rel="stylesheet" href="style.css" />
   </head>
 
@@ -197,7 +198,7 @@
       </div>
     </main>
     <div
-      class="container-fluid bg-pastel-yellow font-ambit-regular"
+      class="container-fluid bg-pastel-yellow font-ambit-regular mt-auto"
       style="height: 300px"
     >
       <div class="container">
