--- a/recipes.html
+++ b/recipes.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Title</title>
+    <title>Recept</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta
+      name="description"
+      content="All about meta tags and how to add them to your website."
+    />
+    <meta
+      name="keywords"
+      content="meta tags, meta description, meta keywords, SEO, search engine optimization"
     />
 
     <!-- Bootstrap CSS v5.2.1 -->
@@ -20,8 +28,9 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
     />
-    <script src="store.js"></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+
+    <script src="./scripts/store.js" async></script>
   </head>
 
   <body id="recipes">
