--- a/store.html
+++ b/store.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Title</title>
+    <title>Produkter</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -19,18 +19,19 @@
     <!-- Bootstrap CSS v5.2.1 -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
+      rel="stylesheet preload"
       integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
       crossorigin="anonymous"
+      as="stylesheet"
     />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
     />
-    <link rel="stylesheet" href="style.css" />
-    <script src="storeitems.js"></script>
-    <script src="store.js" async></script>
-    <link rel="preload" href="./images/1-1.webp" as="image" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="preload" href="./images/1-thumb.webp" as="image" />
+
+    <script src="./scripts/store.js" async></script>
   </head>
 
   <body id="store">
@@ -112,7 +113,7 @@
       <div class="modals-container"></div>
     </main>
     <div
-      class="container-fluid bg-pastel-yellow font-ambit-regular mt-auto"
+      class="container-fluid footer-container bg-pastel-yellow font-ambit-regular mt-auto d-none"
       style="height: 300px"
     >
       <div class="container">
@@ -158,17 +159,16 @@
             class="card-img-top-wrapper rounded-4 d-inline-block overflow-hidden"
           >
             <img
-              class="card-img-top rounded-4 store-item-image"
-              width="376"
-              height="252"
-              style="height: auto"
+              class="card-img-top rounded-4 store-item-image h-100 w-100"
+              width="1194"
+              height="800"
               aria-label="Product Image"
               src=""
               alt="Card image cap"
             />
           </div>
           <div class="card-body d-flex flex-column">
-            <h5 class="card-title store-item-title font-gt-alpina"></h5>
+            <h1 class="h5 card-title store-item-title font-gt-alpina"></h1>
             <p class="card-text store-item-desc flex-grow-1 font-ambit"></p>
           </div>
         </div>
