--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="preload" href="./images/carousel-1.webp" as="image" />
 
-    <script src="./scripts/store.js" async></script>
+    <script src="./scripts/site.js" async></script>
   </head>
 
   <body>
@@ -168,12 +168,11 @@
             <h2
               class="featurette-heading fw-normal lh-1 font-gatefold-demi pb-3"
             >
-              First featurette heading.
-              <span class="text-muted">It’ll blow your mind.</span>
+              Alla Hjärtans Dag är här! 
+              <span class="text-muted">Skäm bort någon du tycker om!</span>
             </h2>
             <p class="lead font-ambit">
-              Some great placeholder content for the first featurette here.
-              Imagine some exciting prose here.
+              Överraska någon du bryr dig om på alla hjärtans dag. Just nu har vi extra många bakverk med Alla Hjärtans Dag tema!
             </p>
           </div>
           <div class="col-md-5">
@@ -190,13 +189,13 @@
             <h2
               class="featurette-heading fw-normal lh-1 font-gatefold-demi pb-3"
             >
-              Oh yeah, it’s that good.
-              <span class="text-muted">See for yourself.</span>
+              Investera i dig själv.
+              <span class="text-muted">Unna dig lite vardagslyx!</span>
             </h2>
             <p class="lead font-ambit">
-              Another featurette? Of course. More placeholder content here to
-              give you an idea of how this layout would work with some actual
-              real-world content in place.
+              Sätt lite guldkant på vardagen genom att unna dig något du tycker
+              om. Vi har kakor och bakverk för alla smaker. Spana in vårt
+              sortiment på sidan "Sortiment"
             </p>
           </div>
           <div class="col-md-5 order-md-1">
