--- a/recipes.html
+++ b/recipes.html
@@ -30,7 +30,7 @@
     />
     <link rel="stylesheet" href="./styles/style.css" />
 
-    <script src="./scripts/store.js" async></script>
+    <script src="./scripts/site.js" async></script>
   </head>
 
   <body id="recipes">
