--- a/store.html
+++ b/store.html
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="preload" href="./images/1-thumb.webp" as="image" />
 
-    <script src="./scripts/store.js" async></script>
+    <script src="./scripts/site.js" async></script>
   </head>
 
   <body id="store">
